@@ -62,6 +62,7 @@ sub getdescription() {
 		@_,
 	);
 	if ($args{name}) {
+		# Thanks for Tim Engler <engler at gmail.com> (2009/06/10)
 		unless ($this->{$Net::UPnP::Device::_DESCRIPTION} =~ m/<$args{name}>(.*?)<\/$args{name}>/i) {
 			return '';
 		}
